# SmartTech_CA2_Udacity

./: .gitignore  bc.py  drive.py  main.py  model1_v1.h5  model1_v2.h5  model2_v1.h5  model2_v2.h5  model2_v3.h5  model2_v4.h5  model2_v5.h5  nvidia_model_elu_dropout.h5  pyproject.toml
DataForCar/: driving_log.csv
DataForCar2/: driving_log.csv
