[project]
name = "bc-car"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"

dependencies = [
  # Core GPU stack (Windows + TF 2.10)
  "tensorflow==2.10.0",
  "numpy==1.23.5",

  # ML / data
  "scikit-learn==1.7.2",
  "pandas==2.1.0",
  "matplotlib==3.10.8",

  # Images
  "opencv-python==4.11.0.86",
  "pillow==12.1.0",
  "albumentations==1.3.1",
  
  "eventlet==0.33.3",
  "python-socketio==4.6.1",
  "python-engineio==3.13.2",
  "flask==2.2.5",
  "tensorflow-io-gcs-filesystem==0.31.0",
]
